--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,7 @@ CameraSpeed=3
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Cats/Widget
-ContentBrowserTab1.SelectedPaths=/Game/Cats/Assets/Props
+ContentBrowserTab1.SelectedPaths=/Game/Cats/Blueprint/Component
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -255,12 +255,12 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Cats/Map/StartingScreen
+LastLevel=/Game/Cats/Map/ThirdPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -364,12 +364,12 @@ FbxImportUI="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
-SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 MaterialExpressionTextureSample="\"Object\" "
@@ -727,8 +727,8 @@ PowerUpDataObject_Summon_C="\"Object.Default.StructData\" "
 SelectPowerUp_C="\"Object\" "
 PowerUpDataObject_C="\"Object\" "
 Trigger_1="\"Struct\" "
-C_ACT_Attack_C="\"Object\" \"Object.Object Types\" "
-C_BaseAction_C="\"Object\" \"Object.Object Types\" "
+C_ACT_Attack_C="\"Object\" "
+C_BaseAction_C="\"Object\" "
 C_ACT_Jump_C="\"Object\" "
 C_ACT_SummonMice_C="\"Object\" "
 PowerUpIcon_C="\"Object\" "
@@ -762,16 +762,12 @@ BoxOpen_C="\"Object\" "
 PhysicsAssetGenerationSettings="\"Object\" "
 PhysicsAsset="\"Object\" "
 EditorAnimSegment="\"Object\" "
+C_ACT_AttackFix_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Cats/Blueprint/Cat.Cat
-OpenAssetsAtExit=/Game/Cats/Assets/Cat/Custom/Cat_ABP.Cat_ABP
-OpenAssetsAtExit=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_RIG_Skeleton.Cat_RIG_Skeleton
-OpenAssetsAtExit=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_ABP.Cat_ABP
-OpenAssetsAtExit=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_WALK.Cat_WALK
-OpenAssetsAtExit=/Game/Cats/Blueprint/BreakableProps/FlowerPot.FlowerPot
-OpenAssetsAtExit=/Game/Cats/Assets/Props/flower_pot.flower_pot
+OpenAssetsAtExit=/Game/Cats/Blueprint/Component/C_ACT_Attack.C_ACT_Attack
+OpenAssetsAtExit=/Game/Cats/Blueprint/Component/C_ACT_AttackFix.C_ACT_AttackFix
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -805,7 +801,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Github_Repo/ProjectCats/Content/Cats/Map
+UNR=D:/Documents/Unreal Projects/ProjectCats/Content/Cats/Map
 BRUSH=D:/Documents/Unreal Projects/ProjectCats/Content/
 FBX=D:/Documents/Unreal Projects/ProjectCats/Content/
 FBXAnim=D:/Documents/Unreal Projects/ProjectCats/Content/
@@ -1860,13 +1856,13 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Jeux/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Jeux/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/Cats/Map/StartingScreen
-MRUItem1=/Game/Cats/Map/ThirdPersonMap
+MRUItem0=/Game/Cats/Map/ThirdPersonMap
+MRUItem1=/Game/Cats/Map/StartingScreen
 MRUItem2=/Game/Basic_VFX/Demo/Map/Demo_map
 MRUItem3=/Game/Cats/Map/Parc
 MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -1883,7 +1879,7 @@ WorldPartitionRuntimeSpatialHash=
 CapsuleComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens
 CapsuleComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,GeometryCollectionComponent.Physics.ConstraintsGroup,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 SkeletalMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
-SkeletalMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
+SkeletalMeshComponent=
 SceneComponent=
 SceneComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,Cat_C.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PropertyWrapper.DefaultValueCategory.Object Types,PropertyWrapper.DefaultValueCategory.PowerUpData,PropertyWrapper.DefaultValueCategory.Struct,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionComponent.Collision.Collision,GeometryCollectionComponent.Physics.ConstraintsGroup,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,WidgetComponent.Physics.ConstraintsGroup,WidgetComponent.Collision.Collision
 Adults_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens
@@ -5234,6 +5230,13 @@ AnimGraphNode_StateResult.Functions=True
 AnimGraphNode_StateResult.Tag=True
 EditorAnimSegment.Animation Segment=True
 EditorAnimSegment.Montage=True
+C_ACT_AttackFix_C.ComponentTick=True
+C_ACT_AttackFix_C.Default=True
+C_ACT_AttackFix_C.Tags=True
+C_ACT_AttackFix_C.Activation=True
+C_ACT_AttackFix_C.Cooking=True
+C_ACT_AttackFix_C.ComponentReplication=True
+C_ACT_AttackFix_C.Variable=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -5348,29 +5351,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Assets/Props/flower_pot
-MRUItem1=/Game/Cats/Blueprint/BreakableProps/FlowerPot
-MRUItem2=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_WALK
-MRUItem3=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_walk_BS
-MRUItem4=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_IDLE
-MRUItem5=/Game/Cats/Assets/Cat/Custom/Animation_v2/CatAttackMontage
-MRUItem6=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_RIG_Skeleton
-MRUItem7=/Game/Cats/Blueprint/Cat
-MRUItem8=/Game/Cats/Assets/Cat/Custom/AttackMontage
-MRUItem9=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_HIT
-MRUItem10=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_ABP
-MRUItem11=/Game/Cats/Assets/Cat/Custom/Skeletton_Cat_00_Skeleton
-MRUItem12=/Game/Cats/Assets/Cat/Custom/Cat_ABP
-MRUItem13=/Game/Cats/Assets/Cat/Custom/Walk_BS
-MRUItem14=/Game/Cats/Assets/Cat/Custom/Animation/Cat_walk_BS
-MRUItem15=/Game/Cats/Assets/Cat/Custom/Animation/Cat_WALK
-MRUItem16=/Game/Cats/Assets/Cat/Custom/Animation/Cat_RUN
-MRUItem17=/Game/Cats/Assets/Cat/Custom/Animation/Cat_IDLE
-MRUItem18=/Game/Cats/Assets/Cat/Custom/Animation/Cat_RIG_Skeleton
-MRUItem19=/Game/Cats/Assets/Cat/Custom/Animation/Cat_RIG
+MRUItem0=/Game/Cats/Blueprint/Component/C_ACT_AttackFix
+MRUItem1=/Game/Cats/Blueprint/Component/C_ACT_Attack
+MRUItem2=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_HIT
+MRUItem3=/Game/Cats/Map/ThirdPersonMap
+MRUItem4=/Game/Cats/Assets/Props/flower_pot
+MRUItem5=/Game/Cats/Blueprint/BreakableProps/FlowerPot
+MRUItem6=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_WALK
+MRUItem7=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_ABP
+MRUItem8=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_RIG_Skeleton
+MRUItem9=/Game/Cats/Assets/Cat/Custom/Cat_ABP
+MRUItem10=/Game/Cats/Blueprint/Cat
+MRUItem11=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_walk_BS
+MRUItem12=/Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_IDLE
+MRUItem13=/Game/Cats/Assets/Cat/Custom/Animation_v2/CatAttackMontage
+MRUItem14=/Game/Cats/Assets/Cat/Custom/AttackMontage
+MRUItem15=/Game/Cats/Assets/Cat/Custom/Skeletton_Cat_00_Skeleton
+MRUItem16=/Game/Cats/Assets/Cat/Custom/Walk_BS
+MRUItem17=/Game/Cats/Assets/Cat/Custom/Animation/Cat_walk_BS
+MRUItem18=/Game/Cats/Assets/Cat/Custom/Animation/Cat_WALK
+MRUItem19=/Game/Cats/Assets/Cat/Custom/Animation/Cat_RUN
 
 [MaterialEditor]
 PrimType=1
@@ -5772,6 +5775,7 @@ None=======
 /Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_RIG_Skeleton.Cat_RIG_Skeleton=0
 /Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_ABP.Cat_ABP=0
 /Game/Cats/Assets/Cat/Custom/Animation_v2/Cat_WALK.Cat_WALK=0
+/Game/Cats/Blueprint/Component/C_ACT_AttackFix.C_ACT_AttackFix=0
 
 [SelectionDetails]
 PreserveScaleRatio=True
