--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,7 @@ CameraSpeed=3
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Cats/Widget
-ContentBrowserTab1.SelectedPaths=/Game/Cats/Map
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -255,7 +255,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Cats/Map/ThirdPersonMap
+LastLevel=/Game/Cats/Map/StartingScreen
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
